--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@ layout: default
 ---
 
   <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-97D50GYB97"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-97D50GYB97');
+    </script>
+  </head>
     <body>
       <ul>
         <li> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c">群組聚合搜索</a> </li>
