--- a/index.html
+++ b/index.html
@@ -20,5 +20,9 @@ layout: default
       <script async src="https://cse.google.com/cse.js?cx=d5ff14b6646b6441c">
       </script>
       <div class="gcse-search"></div> 
+
+      <footer>
+        <p>copyright by wskylover, based on cayman and github, enhanced by google</p>
+      </footer>
     </body>
 </html>
