--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@ layout: default
       </script>
       <div class="gcse-search"></div> 
 
-      <footer>
-        <p>copyright by wskylover, based on cayman and github, enhanced by google</p>
-      </footer>
+      <ul>
+        <li> <a href="https://github.com/wskylover/gpst/blob/main/spare.md">備用搜索(聚合搜索失效時點擊)</a> </li>
+      </ul>
+
     </body>
 </html>
