--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@ layout: default
   </head>
     <body>
       <ul>
-        <li> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c">群組聚合搜索</a> </li>
+        <li> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c"><h2>群組聚合搜索</h2></a> </li>
       </ul>
 
       <script async src="https://cse.google.com/cse.js?cx=d5ff14b6646b6441c">
       </script>
       <div class="gcse-search"></div> 
-
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
+      <p>  </p>
       <ul>
-        <li> <a href="https://github.com/wskylover/gpst/blob/main/spare.md">備用搜索(聚合搜索失效時點擊)</a> </li>
+        <li> <a href="https://github.com/wskylover/gpst/blob/main/spare.md"><code>備用搜索(聚合搜索失效時點擊)</code></a> </li>
       </ul>
 
     </body>
