--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
       <p>  </p>
       <p>  </p>
       <ul>
-        <li> <a href="https://github.com/wskylover/gpst/blob/main/spare.md"><code>備用搜索(聚合搜索失效時點擊)</code></a> </li>
+        <li> <a href="https://wskylover.github.io/gpst/spare.html"><code>備用搜索(聚合搜索失效時點擊)</code></a> </li>
       </ul>
 
     </body>
