--- a/_html/youtube.html
+++ b/_html/youtube.html
@@ -1,3 +1,16 @@
 ---
 layout: default
+title: spare website
+description: 使用方法同聚合搜索
 ---
+    <head>
+        <body>
+            <ul>
+                <li> <a href="https://cse.google.com/cse?cx=518ed58d6de534dad"><h4>YouTube</h4></a> </li>
+            </ul>
+
+            <script async src="https://cse.google.com/cse.js?cx=518ed58d6de534dad">
+            </script>
+            <div class="gcse-search"></div>
+        </body>
+</html>
