--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 
     <body>
       <ul>
-        <li> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c"><h2>群組聚合搜索</h2></a> </li>
+        <li align="center"> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c"><h2>群組聚合搜索</h2></a> </li>
       </ul>
 
       <script async src="https://cse.google.com/cse.js?cx=d5ff14b6646b6441c">
