--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@ layout: default
   <head>
 
     <body>
-      <u>
+      <ul>
         <li align="center"> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c"><h2>群組聚合搜索</h2></a> </li>
-      </u>
+      </ul>
 
       <script async src="https://cse.google.com/cse.js?cx=d5ff14b6646b6441c">
       </script>
       <div class="gcse-search"></div> 
-
       
-      <u>
-        <li> <a href="https://wskylover.github.io/gpst/spare.html"><code>備用搜索(聚合搜索失效時點擊)</code></a> </li>
-      </u>
+      <b><a href="https://wskylover.github.io/gpst/spare.html"><code>備用搜索(聚合搜索失效時點擊)</code></a></b>
+      
 
     </body>
 </html>
