--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
   <head>
 
     <body>
-      <li align="center"> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c"><h2>群組聚合搜索</h2></a> </li>
+      <b align="center"> <a href="https://cse.google.com/cse?cx=d5ff14b6646b6441c"><h2>群組聚合搜索</h2></a> </b>
 
       <script async src="https://cse.google.com/cse.js?cx=d5ff14b6646b6441c">
       </script>
