--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ layout: default
           <li>按照“關鍵詞+網址頭”的形式進行搜索,例如<b>幣+"t.me/"</b></li>
           <li>每次搜索的關鍵詞最好在2~3個,越準確越好</li>
           <li>可搜索8個主流社交網站(YouTube,Twitter,LinkedIn,Instagram,Facebook,Reddit,Tumblr和Tiktok等)</li>
+          <li>每次搜索結果顯示有限,變換關鍵詞順序再搜索即可出現不同的内容</li>
         </ol>
       
       <script async src="https://cse.google.com/cse.js?cx=d5ff14b6646b6441c">
